# cr-dai-tools

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.ros2  LICENSE  README.md  docker-compose-ros2.yml  docker-compose.yml  entrypoint.sh
.github/workflows/: binary-builds.yml  docker-image.yml
apps/: example-ui.cc  example.cc
dai-tools/: CMakeLists.txt
dai-tools/include/cr/dai-tools/: DepthToXYZ.h  DeviceMetaInfo.h  DeviceRunner.h  NodeWalker.h  PipelineBuilder.h  Utils.h
dai-tools/include/termcolor/: termcolor.hpp
dai-tools/src/: DepthToXYZ.cc  DeviceMetaInfo.cc  PipelineBuilder.cc  auto-device-runner.cc  cr-dai-tools.cc  depthai_daemon.cc  device-runner.cc  generate_pipeline.cc
include/: dai-pipeline-tools.h
perspectives/: Default.perspective
ros/: CMakeLists.txt  package.xml
ros/apps/: autonode.cc
ros/cfg/: CameraControl.cfg  DeviceControl.cfg  StereoDepth.cfg  ToFControl.cfg
ros/include/cr/dai-tools/: DepthAICameraInfoManager.hpp  DepthPublisher.h  IMUPublisher.h  ImagePublisher.h  NNPublisher.h  PipelinePublisher.h  Publisher.h  ToFDepthPublisher.h  Tx.h  ros_headers.h  virtual_camera_info_manager.h
ros/msg/: CameraMetadata.msg
ros/src/: DepthAICameraInfoManager.cpp  DepthPublisher.cc  IMUPublisher.cc  ImagePublisher.cc  NNPublisher.cc  PipelinePublisher.cc  ToFDepthPublisher.cc  ros_impl.cc  tx.cc  virtual_camera_info_manager.cc
src/: dai-pipeline-tools.cc  generate_pipeline.cc
